<resources>
    <string name="app_name">Login Example</string>

    <string name="action_about">About</string>
    <string name="author">Gerry Hurdle (hurdleg)</string>
    <string name="canvas">canvas</string>
    <string name="email">Email</string>
    <string name="emailHint">Your Algonquin Email</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="passwordHint">Your Password</string>
    <string name="passwordRecover">I don\'t know my password</string>
    <string name="rememberMe">Remember Me</string>
</resources>
