<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquincollege.hurdleg.loginexample.MainActivity">

    <TextView android:text="@string/canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:textSize="80sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/border"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/userEmailText"
            android:hint="@string/emailHint"
            android:background="@android:drawable/editbox_background_normal"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/userPasswordText"
            android:hint="@string/passwordHint"
            android:background="@android:drawable/editbox_background_normal"
            android:textSize="25sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:textSize="50sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordRecover"
            android:id="@+id/forgotMyPasswordButton"
            android:onClick="handleForgotPasswordButton (MainActivity)"
            android:textSize="15sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberMe"
            android:id="@+id/isRememberMe"
            android:textSize="20sp" />
    </LinearLayout></RelativeLayout>
